--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -85,14 +85,14 @@ const menuitems = [
         </ul>
         <div class="lg:hidden flex items-center mt-3 gap-4">
           <Link href="#" style="muted" block size="md">Log in</Link>
-          <Link href="#" size="md" block>Sign up</Link>
+          <Link href="#" size="md" style="accent" block>Sign up</Link>
         </div>
       </MenuItems>
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
         <a href="#">Log in</a>
-        <Link href="#" size="md">Sign up</Link>
+        <Link href="#" size="md" style="accent">Sign up</Link>
       </div>
     </div>
   </header>
