--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -3,7 +3,7 @@ interface Props {
   href: string;
   size?: "md" | "lg";
   block?: boolean;
-  style?: "outline" | "primary" | "inverted" | "muted";
+  style?: "outline" | "primary" | "inverted" | "muted" | "accent";
   class?: string;
   [x: string]: any;
 }
@@ -27,6 +27,7 @@ const styles = {
   primary: "bg-black text-white hover:bg-gray-800  border-2 border-transparent",
   inverted: "bg-white text-black   border-2 border-transparent",
   muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
+  accent: "bg-brand-accent text-brand-primary hover:bg-brand-accent/80 border-2 border-transparent",
 };
 ---
 
