--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -39,17 +39,18 @@ const menuitems = [
 ];
 ---
 
-<Container>
-  <header class="flex flex-col lg:flex-row justify-between items-center my-5">
+<div class="bg-brand-primary text-brand-text-on-dark py-5">
+  <Container>
+    <header class="flex flex-col lg:flex-row justify-between items-center">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800">Astro</span><span
-            class="text-slate-500">ship</span
+          ><span class="font-bold text-white">Astro</span><span
+            class="text-brand-text-on-dark/80">ship</span
           >
         </a>
         <div class="block lg:hidden">
-          <MenuIcon class="w-4 h-4 text-gray-800" />
+          <MenuIcon class="w-4 h-4 text-white" />
         </div>
       </div>
       <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
@@ -69,7 +70,7 @@ const menuitems = [
                   <li>
                     <a
                       href={item.path}
-                      class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900">
+                      class="flex lg:px-3 py-2 items-center text-brand-text-on-dark/80 hover:text-white">
                       <span> {item.title}</span>
                       {item.badge && (
                         <span class="ml-1 px-2 py-0.5 text-[10px] animate-pulse font-semibold uppercase text-white bg-indigo-600 rounded-full">
@@ -91,9 +92,10 @@ const menuitems = [
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <a href="#">Log in</a>
+        <a href="#" class="text-brand-text-on-dark/80 hover:text-white">Log in</a>
         <Link href="#" size="md" style="accent">Sign up</Link>
       </div>
     </div>
-  </header>
-</Container>
+    </header>
+  </Container>
+</div>
