--- a/src/components/navbar/dropdown.astro
+++ b/src/components/navbar/dropdown.astro
@@ -35,7 +35,7 @@ const { title, lastItem, children } = Astro.props;
             children.map((item) => (
               <a
                 href={item.path}
-                class="py-1 text-gray-600 hover:text-gray-900">
+                class="py-1 text-brand-text-on-dark/80 hover:text-white lg:text-gray-600 lg:hover:text-gray-900">
                 {item.title}
               </a>
             ))
