feat: disable extra components

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -24,7 +24,7 @@ const bgImage = await getImage({ src: heroImage, format: "avif" });
         From door to destination, effortlessly.
       </p>
       <div class="mt-8 flex flex-col sm:flex-row gap-3 justify-start">
-        <Link href="#" style="accent" class="flex gap-1 items-center justify-center">
+        <Link href="https://dvi4ge7olothr.cloudfront.net/" style="accent" class="flex gap-1 items-center justify-center">
           Explore Your Next Arrival
         </Link>
       </div>
